@@ -3,6 +3,7 @@ Changes for 2.2.19rc1
 New features:
 
 Bug fixes:
+A......... [ZBX-12023] fixed permission issue with event.get method (Sasha)
 .......PS. [ZBX-12046] fixed handling of database failure during ID selection (vso)
 ..F....... [ZBX-11683] fixed problem with lost IDs of unlinkable templates (miks)
 .......PS. [ZBX-11584] fixed selection of ntext data from Microsoft SQL Server using 'db.odbc.select' item key (Sergejs)
